now we can resend authMail

--- a/app/views/account_activations/authMail.html.erb
+++ b/app/views/account_activations/authMail.html.erb
@@ -16,7 +16,7 @@
 
       <div class="centered main_center fit_div">
         <p class="logo fit_logo">CLASSLION</p>
-        <a href="#"><button type="button" class="login_btn mail_btn">인증메일 재발송</button></a><br>
+        <a href="/signup/resend_authMail"><button type="button" class="login_btn mail_btn">인증메일 재발송</button></a><br>
         <a href="<%= login_path %>"><button type="button" class="join_btn mail_login_btn">로그인</button></a>
       </div>
     </div>
