--- a/app/views/account_activations/authMail.html.erb
+++ b/app/views/account_activations/authMail.html.erb
@@ -24,7 +24,7 @@
 </div>
 
 <script>
-  // 로고 숨기고 로고만큼 넓이 맞추기 위한 jquery
+  <%# 로고 숨기고 로고만큼 넓이 맞추기 위한 jquery %>
   function setWidth() {
     var fit_logo = $(".fit_logo");
     var fit_div = $(".fit_div");
