--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,5 +1,4 @@
-<h1>User#password_reset</h1>
-
-<p>
-  <%= @greeting %>, find me in app/views/user_mailer/password_reset.html.erb
-</p>
+<h1> 비밀번호 초기화 </h1>
+<p>아래의 링크를 눌러 비밀번호를 재설정해주세요.</p>
+<%= link_to "비밀번호 재설정", edit_password_reset_url(@user.reset_token, email: @user.email) %>
+<p> 이 링크는 2시간동안 유효합니다. </p>
