--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,3 +1,4 @@
-User#password_reset
-
-<%= @greeting %>, find me in app/views/user_mailer/password_reset.text.erb
+비밀번호 초기화
+아래의 링크를 눌러 비밀번호를 재설정해주세요.
+<%= link_to "비밀번호 재설정", edit_password_reset_url(@user.reset_token, email: @user.email) %>
+이 링크는 2시간동안 유효합니다.
