--- a/app/views/courses/_evaluations.html.erb
+++ b/app/views/courses/_evaluations.html.erb
@@ -52,7 +52,7 @@
 
                             <p class="feed_etc">
 
-                              <%= form_for Comment.new, :id => 'comment', :remote => true do |f| %>
+                              <%= form_for Comment.new, id: 'comment',  remote: true do |f| %>
                                   <%= f.hidden_field :evaluation_id, value: e.id %>
                                   <%= f.text_field :body, autofocus: true, placeholder: "댓글"%>
                                   <%= f.submit "작성하기" %>
@@ -222,25 +222,5 @@
     // onSelect: function(value, text) {
     // alert('Selected rating: ' + value);
     // }
-  });
-
-  $(function(){
-    $(".comment").click(function(){
-      post_id=this.value;
-      post_content = $("#content_"+post_id).val();
-      $.ajax({
-        method: "POST",
-        url: "/home/reply_write",
-        data: { content: post_content, id_of_post:post_id },
-        success: function(){
-          alert("리플이 작성되었습니다.");
-          $("#reply_"+post_id).append("<p>"+post_content+"</p>")
-          $("#content_"+post_id).val('');
-        },
-        error: function(){
-          alert("리플이 작성되지 않았습니다.");
-        }
-      })
-    });
   });
 </script>
