--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -20,7 +20,7 @@
 
 <br>
 <%# 관심강의  %>
-<% if Favorite.exists?(course_id: @course.id) %>
+<% if Favorite.exists?(course_id: @course.id, user_id: current_user.id) %>
     <%= button_to '관심강의에서제거', courses_favorites_delete_path, method: :post, :onClick => 'alert("관심강의에서 제거되었습니다!")' %>
 <% else %>
     <%= button_to '관심강의에다추가', courses_favorites_add_path, method: :post, :onClick => 'alert("관심강의에 추가되었습니다!")' %>
