--- a/app/views/courses/_evaluations.html.erb
+++ b/app/views/courses/_evaluations.html.erb
@@ -83,7 +83,7 @@
                 <p class="feed_etc col-xs-12">
                   <%= e.time_ago %>
                   ·
-                  <a href="#"><%= image_tag "reply.svg", alt: "reply" %></a><%#댓글버튼, 얘를 누르면 밑에가 확장됨 %>
+                  <%= image_tag "reply.svg", alt: "reply", class: "reply_btn", id: "#{e.id}" %><%#댓글버튼, 얘를 누르면 밑에가 확장됨 %>
                   <span id="comment_count<%=e.id%>"><%= e.comments.count %></span><%# 댓글 수 %>
                   ·
                   <a href="#"><%= image_tag "siren.svg", alt: "lion" %></a><%#신고버튼 %>
@@ -92,7 +92,7 @@
             </div><%# ////row %>
 
             <%# 우리가 만든 댓글 코드 %>
-            <div class="row">
+            <div class="row" class="comment_list_wrap" id="comment_list_wrap<%=e.id%>" style="display:none;">
               <div class="col-xs-3 col-sm-2"></div>
               <%# 댓글리스트 %>
               <div class="col-xs-9 col-sm-10 feed_each_div">
@@ -132,6 +132,16 @@
 </div><%# ////index_container %>
 
 <script>
+  <%# 댓글리스트 보였다 안보였다 %>
+  $(".reply_btn").click(function(){
+    var id = $(this).attr('id');
+    var $target = $('#comment_list_wrap'+id);
+
+    $target.slideToggle( 500, function () {
+      $target.is(':visible') ? 'Hide' : 'Show';
+    });
+  });
+
   <%# 평점별점바 %>
   $('.p1').barrating('show', {
     theme: 'bars-pill',
