--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
   
                 <ul>
                   <li><a href="#0">강의평 하나당 300 점이<br>적립됩니다!</a></li>
-                  <li><a href="evaluations/new">평가하러가기!</a></li>
+                  <li><a href="/evaluations/new">평가하러가기!</a></li>
                 </ul>
               </li>
   
