--- a/app/views/evaluations/new.html.erb
+++ b/app/views/evaluations/new.html.erb
@@ -1,6 +1,6 @@
 <br><br><br><br>
 <%= form_for @evaluation do |f| %>
-  <%= f.text_field :course_id, id: "tags", placeholder: "강의명", data: {autocomplete_source: Course.all.map { |t| { :label => t.lecture.name + "(" + t.professor.name + ")", :value => t.id }}} %> <hr>
+  <%= f.text_field :course_id, id: "tags", placeholder: "강의명", data: {autocomplete_source: @courses} %> <hr>
   <%= f.hidden_field :course_id, id: "course_id" %>
   총점<br> <%= f.select :point_overall, options_for_select([1,2,3,4,5]), {}, class: "p" %> <hr>
   널널함<br> <%= f.select :point_easiness, options_for_select([1,2,3,4,5]), {}, class: "p" %> <hr>
